<resources>
    <string name="app_name">DemoApplication</string>
    <string name="double_tap_exit">Please click back again to exit</string>
    <string name="no_internet">No Internet</string>
    <string name="internet">Check your Connection</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="title_loading">Please wait! This may take a moment.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_are_not_connected_with_internet_make_sure_wi_fi_or_mobile_data_is_on_and_try_again">You are not Connected with Internet. Make Sure WI-FI or Mobile data is ON and try again</string>
    <string name="try_again">Try Again</string>
    <string name="invoice">Invoice</string>
    <string name="order">Order</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="deliver_to">Deliver to</string>
    <string name="recent_order">Recent order</string>
    <string name="subscribe_now_for_exclusive_benefits">Subscribe now for exclusive benefits.</string>
    <string name="drugs_you_re_prescribed">Drugs you\'re prescribed.</string>
    <string name="order_placed">Order placed</string>
    <string name="total">Total</string>
    <string name="process_prescription">Process Prescription</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="select_delivery_method">Select delivery method</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="apply">APPLY</string>
    <string name="confirm_and_proceed">Confirm and proceed</string>
    <string name="get_20_off_of_your_order_subscribe_now">Get 20% off of your order, Subscribe now.</string>
    <string name="secure_options_in_checkout">Secure options in checkout</string>
    <string name="sub_total_price">Sub total Price</string>
    <string name="welcome_screen">Splash Screen</string>
    <string name="enter_an_address">Enter an address</string>
    <string name="search">Search</string>
    <string name="address_name">Address name</string>
    <string name="save">Save</string>
    <string name="permission_location_msg">This app need to access your location. Please allow from setting</string>
    <string name="open_setting">Open Setting</string>
    <string name="api">AIzaSyBZF6sPLLkF0h0ETARIhazjTEaW02doHAM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_address">Search address</string>
    <string name="recently_viewed">Recently viewed</string>
</resources>