<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_F5F5F5"
        android:paddingBottom="@dimen/_8sdp"
        tools:context=".ui.ordersummary.OrderSummaryFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/confirm_order"
            android:textColor="@color/black"
            android:textSize="@dimen/_28ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrderId" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeliveryAddresslbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/delivery_address"
            android:textColor="@color/gray_77838F"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toEndOf="@+id/ivLocation"
            app:layout_constraintTop_toBottomOf="@+id/tvOrderId" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddressValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:text="22 pleasant hill rd deerfield nh"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivLocation"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryAddresslbl" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintSelectDeliveryMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:background="@drawable/btn_rounded_shape_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressValue">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSelectDeliveryMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@android:color/transparent"
                android:hint="@string/select_delivery_method"
                android:textColor="@color/gray_C5C5C7"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="SELECT"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrderItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintSelectDeliveryMethod"
            tools:itemCount="2"
            tools:listitem="@layout/raw_order_item_layout" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardSubscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            app:cardElevation="@dimen/_4sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvOrderItem">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintSubscription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_222222"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvOrderItem">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_20_off_of_your_order_subscribe_now"
                android:maxLines="3"
                android:padding="@dimen/_6sdp"
                android:textAlignment="center"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineSub"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintPromo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:background="@drawable/btn_rounded_shape_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardSubscription">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPromoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_promo_code"
                android:textColor="@color/gray_C5C5C7"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/apply"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSecure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/secure_options_in_checkout"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintPromo"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCardlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_card_logo"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSecure"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_total_price"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/gray_8A8A8E"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCardlogo"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeliveryFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delivery Fee"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/gray_8A8A8E"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTotal"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDiscounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Discounts"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/gray_8A8A8E"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryFee"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubDiscounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subscription discount"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/gray_8A8A8E"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDiscounts"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubtotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="$18.99"
            android:textColor="@color/black_22292E"
            android:textSize="@dimen/_16ssp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tvSubTotal"
            app:layout_constraintTop_toTopOf="@+id/tvSubTotal" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnProcessPrescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/btn_rounded_shape"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/confirm_and_proceed"
            android:textAllCaps="false"
            android:textColor="@color/white_F8F8F8"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubDiscounts" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
