<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_F5F5F5"
        android:paddingBottom="@dimen/_8sdp"
        tools:context=".ui.ordersummary.OrderSummaryFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Order #112299100"
            android:textColor="@color/black"
            android:textSize="@dimen/_28ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="Orders that have been confirmed by a doctor cannot be edited."
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrderId" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderPlacedLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/order_placed"
            android:textAlignment="viewStart"
            android:textColor="@color/gray_77838F"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/tvOrderPlacedDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderPlacedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="May 19, 01:11 AM"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvOrderPlacedLbl"
            app:layout_constraintTop_toBottomOf="@+id/tvDesc" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/ic_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrderPlacedDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/total"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toStartOf="@+id/tvOrderPlacedDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivUpload" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="$18.99"
            android:textAlignment="viewEnd"
            android:textColor="@color/black_22292E"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvOrderPlacedLbl"
            app:layout_constraintTop_toBottomOf="@+id/ivUpload" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrderItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalValue"
            tools:itemCount="2"
            tools:listitem="@layout/raw_order_item_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnProcessPrescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/btn_rounded_shape"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/process_prescription"
            android:textColor="@color/white_F8F8F8"
            android:textSize="@dimen/_16ssp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvOrderItem" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:background="@drawable/btn_ouer_line_shape"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnProcessPrescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
